
I need my Escreen sessions to be able to beep, so let's allow that.
----------------------------------------------------------------------
Wed Nov 27 15:17:04 2002                        Michael Jennings (mej)

Same as yesterday, only this time I'm *actually* going to fix the
problem. >:I  I should really read more carefully.

While I was at it, I fixed some bad uses of BEG_STRCASECMP().
----------------------------------------------------------------------
Tue Dec 10 16:50:29 2002                        Michael Jennings (mej)

A few fixes from Andre Pang <ozone@algorithm.com.au>.  One for big-
endian machines, one for automake >= 1.6, and one for using the cut
buffers with the copy/paste script functions.
----------------------------------------------------------------------
Thu Jan  2 14:54:45 2003                        Michael Jennings (mej)

Spec file update.
----------------------------------------------------------------------
Wed Jan  8 01:16:29 2003                        Michael Jennings (mej)

Fixed a bug with non-bordered icons being rendered at 0 size.
----------------------------------------------------------------------
Mon Jan 13 18:17:43 2003                        Michael Jennings (mej)

Fixed an error in the "select_line" description in the man page
spotted by Yasufumi Haga <yasufumi.haga@nifty.com>.
----------------------------------------------------------------------
Wed Jan 22 15:12:36 2003                        Michael Jennings (mej)

Yasufumi Haga <yasufumi.haga@nifty.com> found another typo in the man
page, this one concerning the non-existent "bold multichar" font.
----------------------------------------------------------------------
Mon Jan 27 17:31:41 2003                        Michael Jennings (mej)

Support for xterm's cursor color change sequence (\e]12;<color>\a) as
requested by Thomas <arnognul@tiscali.se>.
----------------------------------------------------------------------